--- a/my-init.org
+++ b/my-init.org
@@ -167,6 +167,120 @@
                 delete-by-moving-to-trash t)))
   #+END_SRC
 
+* Appearance
+
+  #+BEGIN_SRC emacs-lisp
+    ;; Add themes.
+    (dolist
+        (theme (directory-files (expand-file-name "themes" user-emacs-directory) t "\\w+"))
+      (when (file-directory-p theme)
+        (add-to-list 'custom-theme-load-path theme)))
+
+    ;; Tomorrow as a submodule.  It has a bunch of other editor support.
+    (add-to-list 'custom-theme-load-path
+                 (expand-file-name
+                  "themes/tomorrow/GNU Emacs" user-emacs-directory))
+    (add-to-list 'load-path (expand-file-name
+                             "themes/tomorrow/GNU Emacs" user-emacs-directory))
+
+    ;; These ports of Sublime Text 2 themes required a stupid shell script
+    ;; to "install" them which I refuse to use.
+    (add-to-list 'custom-theme-load-path
+                 (expand-file-name
+                  "themes/st2/themes" user-emacs-directory))
+
+    (defvar light-theme 'tomorrow-day "The default lightly colored theme.")
+    ;; Other good light-theme candidates: whiteboard
+
+    (defvar dark-theme 'tomorrow-night-bright "The default darkly colored theme.")
+    ;; Other good dark-theme candidates:
+    ;; tomorrow-night hickey fogus dorsey wilson wombat zenburn
+
+    (defun load-light-theme ()
+      "Load a lightly colored theme for conditions when ambient light
+    is bright."
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme light-theme t)
+      (set-face-background 'hl-line "AntiqueWhite2"))
+
+    (defun load-dark-theme ()
+      "Load a darkly colored theme for conditions when ambient light
+    is dark."
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme dark-theme t)
+      (set-face-background 'hl-line "gray20")
+      (set-face-background 'region "gray36"))
+
+    (defun toggle-theme ()
+      "Switch between the light and dark theme."
+      (interactive)
+      (if (member dark-theme custom-enabled-themes)
+          (load-light-theme)
+        (load-dark-theme)))
+
+    ;; Load a dark theme by default.
+    (load-dark-theme)
+
+    ;; For easy dark-light theme switching.
+    (global-set-key (kbd "C-x t") 'toggle-theme)
+
+    ;; Blink the cursor.
+    (setq blink-cursor-interval 0.75)
+    (blink-cursor-mode 1)
+
+    (defun set--font (font-alist)
+      "Set the font family and size to the given font alist of the
+    format (family . point)."
+      (set-frame-font (car font-alist))
+      (set-face-attribute 'default nil :height (* 10 (cdr font-alist))))
+
+    (defun set--font-from-list (l)
+      "Set the font to first available font alist in the given list."
+      (if (null l) nil
+        (set--font (car l))
+        (if (string= (caar l) (face-attribute 'default :family (selected-frame)))
+            (caar l)
+          (set--font-from-list (cdr l)))))
+
+    (defvar font-list '(("Source_Code_Pro" . 11)
+                        ("Glass_TTY_VT220" . 20)
+                        ("Consolas" . 18)
+                        ("Ubuntu_Mono" . 17)
+                        ("Inconsolata" . 18))
+      "Ordered list of preferred fonts and sizes.")
+
+    (set--font-from-list font-list)
+
+    (defun set-font ()
+      "Set a font from the `font-list'."
+      (interactive)
+      (let ((ignore-case completion-ignore-case))
+        (unwind-protect
+            (progn
+              (setq completion-ignore-case t)
+              (let ((font (completing-read "Font: " font-list)))
+                (set--font (assoc font font-list))))
+          (setq completion-ignore-case ignore-case))))
+
+    (defun get-max-rows (pixel-height)
+      "Return the maximum number of rows that will fit with this screen.
+    Given a screen pixel height at the current frame character height, calculate
+    the maximum number of rows that will fit with that height."
+      (if (window-system)
+          (/ pixel-height (frame-char-height))))
+
+    (defun set-frame-height-to-max ()
+      "Set the selected frame height to the maximum that will fit the current
+    screen resolution."
+      (if (window-system)
+          (set-frame-height (selected-frame)
+                            (get-max-rows (- (display-pixel-height) 44)))))
+
+    (set-frame-height-to-max)
+  #+END_SRC
+
 * =ag=
 
   #+BEGIN_SRC emacs-lisp
