Fix free variable for Hyperspec.

--- a/my-init.org
+++ b/my-init.org
@@ -516,9 +516,9 @@
 
   #+BEGIN_SRC emacs-lisp
     ;; Set HyperSpec root in Dropbox.
-    (setq common-lisp-hyperspec-root
-          (format "file://%s/"
-                  (expand-file-name "Documents/HyperSpec" dropbox-directory)))
+    (defvar common-lisp-hyperspec-root
+      (format "file://%s/"
+              (expand-file-name "Documents/HyperSpec" dropbox-directory)))
   #+END_SRC
 
 * =ibuffer=
