--- a/my-init.org
+++ b/my-init.org
@@ -1,6 +1,9 @@
 #+TITLE: My Init
 #+OPTIONS: toc:2 num:nil
 
+All configuration described here should be performed in an =after-init-hook=
+function.
+
 * Customization
 
   I don't make much use of the [[http://www.gnu.org/software/emacs/manual/html_node/emacs/Customization.html#Customization][Customization]] interface.  By default it dumps
@@ -12,6 +15,43 @@
     (load custom-file)
   #+END_SRC
 
+* Global GNU Emacs Key Bindings
+
+  These global key bindings override /built-in/ functions only.
+  Package-specific or custom function defunition key bindings are made in
+  their own dedicated sections where other specific settings are made.
+
+** Set
+
+   #+BEGIN_SRC emacs-lisp
+     (global-set-key (kbd "C-c DEL") 'join-line)
+     (global-set-key (kbd "C-h C-f") 'find-function)
+     (global-set-key (kbd "C-h C-v") 'find-variable)
+     (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen)
+     (global-set-key (kbd "M-+") 'text-scale-adjust)
+     (global-set-key (kbd "M-.") 'imenu)
+     (global-set-key (kbd "M-`") 'other-window)
+   #+END_SRC
+
+** Unset
+
+   #+BEGIN_SRC emacs-lisp
+   #+END_SRC
+
+* Global =defuns.el= Key Bindings
+
+  These global key bindings are for functions that I've defined in =defuns.el=
+  that have been previously loaded during initialization in =init.el=.
+
+** Set
+
+   #+BEGIN_SRC emacs-lisp
+     (global-set-key (kbd "C-x 0") 'delete-window-and-balance)
+     (global-set-key (kbd "C-x 3") 'split-window-right-and-balance-and-go-there-and-switch-buffer)
+     (global-set-key (kbd "C-x t") 'toggle-theme)
+     (global-set-key (kbd "H-l") 'ifl-region-or-query)
+   #+END_SRC
+
 * Kris Defaults
 
   #+BEGIN_SRC emacs-lisp
@@ -21,9 +61,11 @@
     ;; Homebrew source files.
     (setq source-directory "/Library/Caches/Homebrew/emacs--git")
 
+
     ;; Please, no backup or autosave litter.
     (setq make-backup-files nil
           auto-save-default nil)
+
 
     ;; Show the active region.
     (transient-mark-mode t)
@@ -40,6 +82,7 @@
     ;; What's going on here?
     (setq echo-keystrokes 0.1)
 
+
     ;; quoted-insert is a frequent typo of mine.
     (global-unset-key (kbd "C-q"))
 
@@ -47,62 +90,8 @@
     (global-unset-key (kbd "M-c"))
     (global-unset-key (kbd "M-u"))
 
-    ;; The standard key binding is /madnesssss!/
-    (global-set-key (kbd "M-+") 'text-scale-adjust)
-
-    ;; A bit of OS X style window switching.
-    (global-set-key (kbd "M-`") 'other-window)
-
     ;; Text mode menu bar drives me nuts!
     (global-unset-key (kbd "M-`"))
-
-    ;; I find that I join lines often.
-    (global-set-key (kbd "C-c DEL") 'join-line)
-
-    ;; Easier git-blame-mode access.
-    (global-set-key (kbd "C-x v b") 'git-blame-mode)
-
-    ;; find-function instead of Emacs FAQ.
-    (global-set-key (kbd "C-h C-f") 'find-function)
-
-    ;; find-variable instead of ?
-    (global-set-key (kbd "C-h C-v") 'find-variable)
-
-    ;; Make imenu easier to call.  I don't use *TAGS so this works well for me.
-    (global-set-key (kbd "M-.") 'imenu)
-
-    ;; I'm Feeling Lucky!
-    (global-set-key (kbd "H-l") 'ifl-region-or-query)
-
-    (defun split-window-right-and-balance ()
-      "Balance windows after splitting."
-      (interactive)
-      (split-window-right)
-      (balance-windows))
-
-    (defun split-window-right-and-balance-and-go-there-and-switch-buffer (&optional arg)
-      "Optional argument ARG Prefix argument will switch buffer using ido."
-      (interactive "P")
-      (split-window-right)
-      (balance-windows)
-      (windmove-right)
-      (if arg
-          (ido-switch-buffer)
-        (switch-to-buffer nil)))
-
-    (defun delete-window-and-balance ()
-      "Balance windows after deleting."
-      (interactive)
-      (delete-window)
-      (balance-windows))
-
-    ;; These play more nicely with widescreen monitor.
-    (global-set-key (kbd "C-x 3") 'split-window-right-and-balance-and-go-there-and-switch-buffer)
-    (global-set-key (kbd "C-x 0") 'delete-window-and-balance)
-
-    ;; Toggle fullscreen mode on OS X
-    (if (fboundp 'toggle-frame-fullscreen)
-        (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen))
 
     ;; Where am I?
     ;(global-linum-mode t)
@@ -236,9 +225,6 @@
 
     ;; Load a dark theme by default.
     (load-dark-theme)
-
-    ;; For easy dark-light theme switching.
-    (global-set-key (kbd "C-x t") 'toggle-theme)
 
     ;; Blink the cursor.
     (setq blink-cursor-interval 0.75)
@@ -500,6 +486,8 @@
 
     (autoload 'git-blame-mode "git-blame"
       "Minor mode for incremental blame for Git." t)
+
+    (global-set-key (kbd "C-x v b") 'git-blame-mode)
   #+END_SRC
 
 * =highlight-parentheses=
