--- a/README.org
+++ b/README.org
@@ -1,3 +1,3 @@
-#+TITLE: Literate Programming Emacs Configuration
+* Literate Programming Emacs Configuration
 
-Please visit this project's [[http://krismolendyke.github.io/.emacs.d][GitHub Page]].
+Please visit this project's [[http://krismolendyke.github.io/.emacs.d][GitHub Page]] for more information.
