--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
-* Literate Programming Emacs Configuration
+* [[http://www-cs-faculty.stanford.edu/~uno/lp.html][Literate]] =.emacs.d=
 
-Please visit this project's [[http://krismolendyke.github.io/.emacs.d][GitHub Page]] for more information.
+This is a literate programming attempt at Emacs configuration.  Please visit
+ this project's [[http://krismolendyke.github.io/.emacs.d][GitHub Page]] for more information.
