--- a/custom.org
+++ b/custom.org
@@ -1,8 +1,21 @@
-#+TITLE: Custom
-#+OPTIONS: toc:2 num:nil
+#+TITLE: Literate =.emacs.d=
+#+OPTIONS: toc:nil num:nil
+
+#+BEGIN_QUOTE
+[[http://www.literateprogramming.com/][Literate programming]] is a methodology that combines a programming language
+with a documentation language, thereby making programs more robust, more
+portable, more easily maintained, and arguably more fun to write than programs
+that are written only in a high-level language. The main idea is to treat a
+program as a piece of literature, addressed to human beings rather than to a
+computer. The program is also viewed as a hypertext document, rather like the
+World Wide Web. (Indeed, I used the word WEB for this purpose long before CERN
+grabbed it!) -- Donald Knuth
+#+END_QUOTE
 
 All configuration described here is performed in an =after-init-hook=
 function.
+
+#+TOC: headlines 2
 
 * Customization
 
