Tweak note to self.

--- a/custom.org
+++ b/custom.org
@@ -191,7 +191,7 @@ function.
 * OS X
 
   These may be better suited split up to key bindings and/or a maybe
-  input/mouse section.
+  input/mouse section?
 
   #+BEGIN_SRC emacs-lisp
     ;; I spend most of my time in OS X.
