--- a/custom.org
+++ b/custom.org
@@ -341,6 +341,8 @@ function.
     (set-frame-height-to-max)
   #+END_SRC
 
+** TODO Try out [[https://github.com/bruce/emacs-spacegray-theme][Spacegray theme]]
+
 * ag
 
   [[https://github.com/ggreer/the_silver_searcher][The Silver Searcher]] is similar to =ack=, which in turn is similar to =grep=.
