--- a/custom.org
+++ b/custom.org
@@ -85,6 +85,7 @@ function.
 
    #+BEGIN_SRC emacs-lisp
      (global-set-key (kbd "C-c DEL") 'join-line)
+     (global-set-key (kbd "C-c a") 'org-agenda)
      (global-set-key (kbd "C-h C-f") 'find-function)
      (global-set-key (kbd "C-h C-v") 'find-variable)
      (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen)
