--- a/custom.org
+++ b/custom.org
@@ -903,6 +903,19 @@ function.
     ;; Now that ido-completion is enabled, use it when jumping around.
     (setq org-outline-path-complete-in-steps nil)
 
+    (setq org-todo-keywords
+          '((sequence
+             "TODO(t)"
+             "STARTED(s/!)"
+             "|"
+             "DONE(d!)"
+             "CANCELED(c@)")))
+    (setq org-todo-keyword-faces
+          '(("TODO" . org-todo)
+            ("STARTED" . org-level-2)
+            ("CANCELED" . org-ellipsis)
+            ("DONE" . org-done)))
+
     ;; Resolutions reminder.
     (find-file (expand-file-name "resolutions.org" org-directory))
   #+END_SRC
