--- a/custom.org
+++ b/custom.org
@@ -915,6 +915,8 @@ function.
             ("STARTED" . org-level-2)
             ("CANCELED" . org-ellipsis)
             ("DONE" . org-done)))
+    (setq org-habit-completed-glyph ?✓
+          org-habit-today-glyph ?|)
 
     ;; Resolutions reminder.
     (find-file (expand-file-name "resolutions.org" org-directory))
