--- a/custom.org
+++ b/custom.org
@@ -90,6 +90,7 @@ function.
      (global-set-key (kbd "C-x C-t") 'toggle-frame-fullscreen)
      (global-set-key (kbd "M-+") 'text-scale-adjust)
      (global-set-key (kbd "M-.") 'imenu)
+     (global-set-key (kbd "M-SPC") 'delete-horizontal-space)
      (global-set-key (kbd "M-`") 'other-window)
    #+END_SRC
 
