--- a/custom.org
+++ b/custom.org
@@ -1035,7 +1035,7 @@ function.
                   (define-key python-mode-map (kbd "M-n") 'python-nav-forward-statement)
                   (define-key python-mode-map (kbd "M-p") 'python-nav-backward-statement)
                   (define-key python-mode-map (kbd "C-M-f") 'python-nav-forward-sexp)
-                  (define-key python-mode-map (kbd "C-M-b") '(lambda () (interactive) (python-nav--backward-sexp)))
+                  (define-key python-mode-map (kbd "C-M-b") 'python-nav-backward-sexp)
                   (define-key python-mode-map (kbd "C-M-n") 'python-nav-forward-block)
                   (define-key python-mode-map (kbd "C-M-p") 'python-nav-backward-block)))
 
