--- a/custom.org
+++ b/custom.org
@@ -341,6 +341,8 @@ function.
                             (get-max-rows (- (display-pixel-height) 44)))))
 
     (set-frame-height-to-max)
+
+    (setq inhibit-startup-echo-area-message "kris")
   #+END_SRC
 
 ** Fringe
