Fix free variable assignment for clock idle.

--- a/custom.org
+++ b/custom.org
@@ -986,7 +986,7 @@ function.
 ** Clock
 
    #+BEGIN_SRC emacs-lisp
-     (setq org-clock-idle-time 5)
+     (defvar org-clock-idle-time 5)
    #+END_SRC
 
 * paredit-mode
