--- a/custom.org
+++ b/custom.org
@@ -902,17 +902,6 @@ function.
     ;; Now that ido-completion is enabled, use it when jumping around.
     (setq org-outline-path-complete-in-steps nil)
 
-    (setq org-todo-keywords '((sequence
-                               "TODO(t)"
-                               "STARTED(s/!)"
-                               "|"
-                               "DONE(d!)"
-                               "CANCELED(c@)"))
-          org-todo-keyword-faces '(("TODO" . org-todo)
-                                   ("STARTED" . org-code)
-                                   ("CANCELED" . org-ellipsis)
-                                   ("DONE" . org-done)))
-
     ;; Resolutions reminder.
     (find-file (expand-file-name "resolutions.org" org-directory))
   #+END_SRC
@@ -932,6 +921,21 @@ function.
      (global-set-key (kbd "C-c a") 'org-agenda)
      (global-set-key (kbd "C-x c") 'org-switchb)
      (global-set-key (kbd "<f12>") 'org-agenda-list)
+   #+END_SRC
+
+** TODO Keywords
+
+   #+BEGIN_SRC emacs-lisp
+     (setq org-todo-keywords '((sequence
+                                "TODO(t)"
+                                "STARTED(s/!)"
+                                "|"
+                                "DONE(d!)"
+                                "CANCELED(c@)"))
+           org-todo-keyword-faces '(("TODO" . org-todo)
+                                    ("STARTED" . org-code)
+                                    ("CANCELED" . org-ellipsis)
+                                    ("DONE" . org-done)))
    #+END_SRC
 
 ** Agenda
